--- a/main.css
+++ b/main.css
@@ -1,3 +1,15 @@
 body {
-    background: yellow;
+    background: #bcbcbc;
+         font-family: 'Roboto', sans-serif;    
+}
+
+h1, h2, h3, h4, h5, h6 {
+    color: orangered;
+    font-family: 'Lato', sans-serif;    
+}
+.title {
+    color: orangered;   
+}
+.content {
+    color: #333;   
 }
