--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 body {
     background: #bcbcbc;
-         font-family: 'Roboto', sans-serif;    
+    font-family: 'Roboto', sans-serif;    
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -8,8 +8,12 @@ h1, h2, h3, h4, h5, h6 {
     font-family: 'Lato', sans-serif;    
 }
 .title {
-    color: orangered;   
+    font-family: 'Lato', sans-serif;        
+    font-size: 60px; 
+    color: orangered;  
 }
 .content {
-    color: #333;   
+    font-family: 'Roboto', sans-serif;    
+    font-size: 35px;
+    color: #333; 
 }
