--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 body {
-    background: #bcbcbc;
+    background: #f3f3f3;
     font-family: 'Roboto', sans-serif;    
 }
 
@@ -16,4 +16,12 @@ h1, h2, h3, h4, h5, h6 {
     font-family: 'Roboto', sans-serif;    
     font-size: 35px;
     color: #333; 
+}
+
+.bubble {
+    background: rgba(248,248,250,.85);
+    box-shadow: inset -35px -5px 50px #e5eaec, inset 5px 5px 50px #dbe4e7;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
 }
