--- a/main.css
+++ b/main.css
@@ -25,8 +25,9 @@ h1, h2, h3, h4, h5, h6 {
     height: 40px;
     border-radius: 50%;
     position: absolute;
+    bottom: -100px;
 }
-.bubble1 {
+.bubble.bubble1 {
     animation: 15s bubble1 ease-in-out;
 }
 @keyframes bubble1 {
@@ -43,7 +44,7 @@ h1, h2, h3, h4, h5, h6 {
     95% { bottom: 2000px; left: 430px;}
     to { bottom: 2200px; left: 300px;}
 }
-.bubble2 {
+.bubble.bubble2 {
     animation: 10s bubble2 ease-in-out;
 }
 @keyframes bubble2 {
@@ -60,7 +61,7 @@ h1, h2, h3, h4, h5, h6 {
     95% { bottom: 1900px; left: 900px;}
     to { bottom: 2200px; left: 750px;}
 }
-.bubble3 {
+.bubble.bubble3 {
     animation: 15s bubble3 ease-in-out;
 }
 @keyframes bubble3 {
@@ -77,7 +78,7 @@ h1, h2, h3, h4, h5, h6 {
     95% { bottom: 1950px; left: 930px;}
     to { bottom: 2000px; left: 1100px;}
 }
-.bubble4 {
+.bubble.bubble4 {
     animation: 25s bubble4 ease-in-out;
 }
 @keyframes bubble4 {
@@ -94,7 +95,7 @@ h1, h2, h3, h4, h5, h6 {
     95% { bottom: 2000px; left: 1900px;}
     to { bottom: 2100px; left: 1600px;}
 }
-.bubble5 {
+.bubble.bubble5 {
     animation: 14s bubble5 ease-in-out;
 }
 @keyframes bubble5 {
